--- a/MyDogs/ViewControllers/Base.lproj/MyDogs.storyboard
+++ b/MyDogs/ViewControllers/Base.lproj/MyDogs.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,11 +22,18 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="No dogs added yet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRG-85-X3K">
+                                <rect key="frame" x="0.0" y="311" width="375" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VxB-nh-XqV">
-                                <rect key="frame" x="236" y="508" width="139" height="139"/>
+                                <rect key="frame" x="196" y="603" width="159" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="VxB-nh-XqV" secondAttribute="height" multiplier="1:1" id="gN9-bC-0iY"/>
+                                    <constraint firstAttribute="height" constant="44" id="IS1-iU-n24"/>
                                 </constraints>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                 <state key="normal" title="See sample profiles!"/>
                                 <connections>
                                     <action selector="seeSampleProfilesButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Uj7-dk-Vtb"/>
@@ -37,15 +43,18 @@
                         <color key="backgroundColor" red="0.29035084039999998" green="1" blue="0.5030012251" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qxl-02-0ia" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GAD-wl-l3k"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VxB-nh-XqV" secondAttribute="trailing" id="J8J-Sg-AJn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VxB-nh-XqV" secondAttribute="trailing" constant="20" id="J8J-Sg-AJn"/>
+                            <constraint firstItem="hRG-85-X3K" firstAttribute="centerX" secondItem="qxl-02-0ia" secondAttribute="centerX" id="QTn-JT-6Bx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VxB-nh-XqV" secondAttribute="bottom" constant="20" id="TxS-yA-gyN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qxl-02-0ia" secondAttribute="bottom" id="d3Q-Dv-EC7"/>
+                            <constraint firstItem="hRG-85-X3K" firstAttribute="centerY" secondItem="qxl-02-0ia" secondAttribute="centerY" id="hPw-zo-kZT"/>
                             <constraint firstItem="qxl-02-0ia" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mBX-cP-I1D"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qxl-02-0ia" secondAttribute="trailing" id="pXW-R1-XAc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="noDogsLabel" destination="hRG-85-X3K" id="BNT-rj-eKc"/>
                         <outlet property="seeSampleBiosButton" destination="VxB-nh-XqV" id="WY6-I9-T1y"/>
                         <outlet property="tableOfDogs" destination="qxl-02-0ia" id="70a-l4-6Ej"/>
                     </connections>
