--- a/MyDogs/ViewControllers/DogDetails.storyboard
+++ b/MyDogs/ViewControllers/DogDetails.storyboard
@@ -31,12 +31,19 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ues-gW-ExE">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="koE-Mc-imv">
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="koE-Mc-imv">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                                                             </imageView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z3o-mS-iC9">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </view>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mLk-0d-O9K">
+                                                                <rect key="frame" x="-0.5" y="211" width="375" height="400"/>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="400" id="662-8p-m06"/>
+                                                                </constraints>
                                                             </view>
                                                             <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1l-Y8-L0O">
                                                                 <rect key="frame" x="160" y="77" width="56" height="56"/>
@@ -54,12 +61,15 @@
                                                         <constraints>
                                                             <constraint firstItem="z3o-mS-iC9" firstAttribute="height" secondItem="koE-Mc-imv" secondAttribute="height" id="36G-Re-Zcf"/>
                                                             <constraint firstItem="koE-Mc-imv" firstAttribute="top" secondItem="Ues-gW-ExE" secondAttribute="top" id="898-wL-AQc"/>
+                                                            <constraint firstItem="mLk-0d-O9K" firstAttribute="width" secondItem="koE-Mc-imv" secondAttribute="width" id="8gS-aN-M08"/>
                                                             <constraint firstItem="Z1l-Y8-L0O" firstAttribute="centerX" secondItem="koE-Mc-imv" secondAttribute="centerX" id="AqA-vr-bKg"/>
                                                             <constraint firstAttribute="bottom" secondItem="koE-Mc-imv" secondAttribute="bottom" id="C6J-NF-tSr"/>
                                                             <constraint firstAttribute="trailing" secondItem="koE-Mc-imv" secondAttribute="trailing" id="KLW-0I-fKu"/>
                                                             <constraint firstItem="koE-Mc-imv" firstAttribute="leading" secondItem="Ues-gW-ExE" secondAttribute="leading" id="LGf-9m-CfA"/>
+                                                            <constraint firstItem="mLk-0d-O9K" firstAttribute="centerX" secondItem="koE-Mc-imv" secondAttribute="centerX" id="Ofq-7r-Gjb"/>
                                                             <constraint firstAttribute="width" secondItem="Ues-gW-ExE" secondAttribute="height" multiplier="16:9" id="Y0u-9U-cnW"/>
                                                             <constraint firstItem="z3o-mS-iC9" firstAttribute="centerX" secondItem="koE-Mc-imv" secondAttribute="centerX" id="d50-EI-B1P"/>
+                                                            <constraint firstItem="mLk-0d-O9K" firstAttribute="top" secondItem="koE-Mc-imv" secondAttribute="bottom" id="dVc-uu-ljE"/>
                                                             <constraint firstItem="Z1l-Y8-L0O" firstAttribute="centerY" secondItem="koE-Mc-imv" secondAttribute="centerY" id="hdM-sj-oJ7"/>
                                                             <constraint firstItem="z3o-mS-iC9" firstAttribute="width" secondItem="koE-Mc-imv" secondAttribute="width" id="n8e-vK-BQG"/>
                                                             <constraint firstItem="z3o-mS-iC9" firstAttribute="centerY" secondItem="koE-Mc-imv" secondAttribute="centerY" id="pMu-6d-2tz"/>
